--- a/style.css
+++ b/style.css
@@ -2,11 +2,14 @@ body {
   background-color: black;
   box-sizing: border-box;
   color: white;
+  display: flex;
+  justify-content: center;
+  font-family: "BMEULJIRO";
 }
 
 .container {
   width: 500px;
-  height: 500px;
+  height: 450px;
   position: relative;
   display: flex;
   justify-content: center;
@@ -54,9 +57,10 @@ body {
   align-items: center;
 }
 
-.hour {
-  color: white;
-}
-.minute {
-  color: white;
+@font-face {
+  font-family: "BMEULJIRO";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/BMEULJIRO.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
