--- a/style.css
+++ b/style.css
@@ -4,7 +4,23 @@ body {
   color: white;
   display: flex;
   justify-content: center;
+  align-items: center;
   font-family: "BMEULJIRO";
+  min-height: 100%;
+  min-width: 100%;
+  position: absolute;
+  overflow: hidden;
+}
+
+.bgImage {
+  background-position: center center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .container {
@@ -51,7 +67,7 @@ body {
 
 .letter {
   font-size: 3rem;
-  color: gray;
+  color: hsla(0, 0%, 100%, 0.3);
   display: flex;
   justify-content: center;
   align-items: center;
