--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ body {
   align-items: center;
 }
 
+.on {
+  color: white;
+}
+
 @font-face {
   font-family: "BMEULJIRO";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/BMEULJIRO.woff")
